# pufendorf-ce

./: Cargo.toml  README.md  chatprompts.json  prepare_writings.py  writings_bk1.txt  writings_bk2.txt  writings_prepared.txt
.github/workflows/: release.yml
assets/: chatprompts.json  chatprompts_plain.json  chatprompts_pnoinfo.json  extras_prepared.txt  writings_bk0.txt  writings_bk1.txt  writings_bk2.txt  writings_bk4.txt
src/: embedder.rs  lance.rs  main.rs  structs.rs
